--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,15 @@
 # docker-compose.yaml
 services:
+  administration-service:
+    build: ./administration-service
+    container_name: administration-service
+    restart: always
+    ports:
+      - "8000:8000"
+    environment:
+      DATABASE_URL: "postgresql://myuser:mysecretpassword@db:5432/mydatabase"
+    depends_on:
+      - db
   db:
     image: postgres:15
     container_name: local_postgres
