--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,19 @@ services:
       DATABASE_URL: "postgresql://myuser:mysecretpassword@db:5432/mydatabase"
     depends_on:
       - db
+      - redis
+  auth-service:
+    build: ./auth-service
+    container_name: auth-service
+    restart: always
+    ports:
+      - "8001:8001"
+    environment:
+      DATABASE_URL: "postgresql://myuser:mysecretpassword@db:5432/mydatabase"
+      REDIS_URL: "redis://redis:6379"
+    depends_on:
+      - db
+      - redis
   db:
     image: postgres:15
     container_name: local_postgres
@@ -26,6 +39,15 @@ services:
       
       # This line persists the database data
       - postgres_data:/var/lib/postgresql/data
+  redis:
+    image: redis:7-alpine
+    container_name: local_redis
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
 
 volumes:
   postgres_data:
+  redis_data:
