--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -28,8 +28,8 @@ server {
     }
 
     # Auth service proxy
-    location /auth {
-        proxy_pass http://auth-service:8001;
+    location /auth/ {
+        proxy_pass http://auth-service:8001/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
